--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -21,7 +21,9 @@
     background-color: #6BD1FF;
     border-radius: 10px;
     padding: 15px;
-    width: max-content;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .banner p{
@@ -32,6 +34,7 @@
 
 .bannerText{
     padding: 10%;
+    width: 600px;
 }
 
 .player{
