--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,12 +1,16 @@
 .card{
     width: 430px;
+    height: 330px;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
 }
 
 .img{
     width: 100%;
+    max-height: 76%;
     border-radius: 11px 11px 0 0;
-    object-fit: cover;   
+    object-fit: cover;  
 }
 
 .cardFooter{
@@ -14,6 +18,7 @@
     flex-direction: row;
     background-color: black;
     border-radius: 0 0 11px 11px;
+
 }
 
 .title{
