--- a/src/components/Form/Button/Button.module.css
+++ b/src/components/Form/Button/Button.module.css
@@ -11,6 +11,6 @@
 }
 
 .button:hover{
-    background-color: #17447c;
-    border: solid 3px #2271D1;
+    background-color: #146e80;
+    border: solid 3px #22b4d1;
 }
