--- a/src/components/Form/FormVideo.module.css
+++ b/src/components/Form/FormVideo.module.css
@@ -6,7 +6,7 @@
 
 .formVideo form{
     width: 80%;
-    border: solid 5px #6BD1FF;
+    border: solid 5px #22b4d1;
     padding: 3%;
     border-radius: 15px;
     display: flex;
