--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 .banner{
     width: 100%;
     height: 800px;
@@ -22,10 +26,8 @@
     background-color: #6BD1FF;
     border-radius: 10px;
     padding: 15px;
-    overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
-    width: min-content;
+    max-width: fit-content; 
 }
 
 .banner p{
@@ -37,15 +39,14 @@
 
 .bannerText{
     padding: 10% 5%;
-    width: 600px;
+    max-width: 50%;
 }
 
 .player{
-    width: 40%;
-    max-height: 55%;
+    width: 50%;
     padding: 5%;
     margin-left: auto;
     color: #ff5353 ;
     font-size: 30px;
-    object-fit: contain;
+    object-fit: cover;
 }
