--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,12 +3,12 @@
     padding: 20px;
     display: flex;
     flex-direction: row;
-    border-bottom: solid 5px #2271D1;
+    border-bottom: solid 5px #22b4d1;
 }
 
 header img{
     object-fit: contain;
-    width: 170px;
+    width: 200px;
     margin-left: 3%;
 }
 
@@ -27,13 +27,13 @@ header img{
     text-align: center;
     padding: 0; 
     align-items: center;
-    border: solid 3px #2271D1;
+    border: solid 3px #22b4d1;
     border-radius: 10px;
     transition: all 0.3s;
 }
 
 .list li:hover {
-    background-color: #2271D1;
+    background-color: #22b4d1;
 }
 
 .link {
