--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -8,12 +8,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: relative;
 }
 
 .bannerImg{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
     filter: brightness(30%);
     position: absolute;
     z-index: -1;
@@ -49,4 +51,40 @@
     color: #ff5353 ;
     font-size: 30px;
     object-fit: cover;
+}
+
+@media screen and (max-width: 900px){
+
+    .banner{
+        flex-direction: column;
+    }
+
+    .bannerText{
+        padding: 3%;
+        max-width: 90%;
+    }
+
+
+    .banner h1{
+       width: 100%;
+       text-align: center;
+    }
+    
+    .banner p{
+        width: 100%;
+    }
+
+    .player{
+        width: 80%;
+        margin: 0;
+        justify-content: center;
+    }
+
+}
+
+@media screen and (max-width: 500px){
+    .banner{
+        display: none;
+    }
+
 }
