--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,13 +6,13 @@
     border-bottom: solid 5px #22b4d1;
 }
 
-header img{
+.logo{
     object-fit: contain;
     width: 200px;
     margin-left: 3%;
 }
 
-.header ul{
+.list{
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -45,4 +45,34 @@ header img{
     width: 100%;
     height: 100%;
     padding: 10px 0; 
+}
+
+
+
+@media screen and (max-width: 650px){
+    .header{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header ul{
+        margin: 0;
+        margin-top: 4%;
+    }
+
+    .logo{
+        margin: 0;
+    }
+
+    .list{
+        padding: 0;
+        margin: 0;
+        gap: 20px;
+
+    }
+
+    .list li{
+        margin: 0;
+    }
+
 }
