--- a/src/pages/NewVideo/NewVideo.module.css
+++ b/src/pages/NewVideo/NewVideo.module.css
@@ -2,3 +2,11 @@
     background-color: #262626;
     padding: 5%;
 }
+
+@media screen and (max-width: 600px){
+
+    .formVideo{
+        padding: 5% 1%;
+    }
+
+}
